--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+SC:700');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,700&display=swap');
 
 :root {
     --white: #f0f0f0;
@@ -15,7 +15,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: 'Noto Sans SC', sans-serif;
-    font-weight: bold;
+    font-weight: 400;
     font-size: 28px;
 }
 
@@ -26,6 +26,7 @@ p {
 .main-center {
     text-align: center;
     font-size: 8vmin;
+    font-weight: 700;
 }
 .sub-center {
     text-align: left;
@@ -49,6 +50,7 @@ p {
 }
 #title-main-text {
     font-size: 10vmin;
+    font-weight: 700;
     fill: var(--white);
     text-align: center;
     transform: translateY(calc(50vh - 10vmin));
