制作物の動画テスト実装

--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,9 @@ p {
 #product {
     margin: 30vh 0px;
 }
+.movie {
+    text-align: center;
+}
 
 /* レスポンシブデザイン */
 @media screen and (max-width: 500px) {
