動画サイズの変更

--- a/css/index.css
+++ b/css/index.css
@@ -148,8 +148,15 @@ p {
 #product {
     margin: 30vh 0px;
 }
+#product-container {
+    margin: 5vmin 0px 0px;
+}
 .movie {
     text-align: center;
+}
+iframe {
+    height: 54vmin;
+    width: 96vmin;
 }
 
 /* レスポンシブデザイン */
@@ -167,5 +174,9 @@ p {
     /* タブレット横、PC */
     .sub-center {
         font-size: 3vmin;
+    }
+    iframe {
+        height: 27vmin;
+        width: 48vmin;
     }
 }
