--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,7 @@ p {
 }
 #product-container {
     margin: 5vmin 0px 0px;
+    display: flex;
 }
 .movie {
     text-align: center;
@@ -158,6 +159,57 @@ iframe {
     height: 54vmin;
     width: 96vmin;
 }
+#arapp5d {
+    order: 1;
+}
+.box {
+    width: 100vmin;
+    height: 50vmin;
+    margin: 5vmin auto;
+    position: relative;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+}
+.box-60deg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    transform: rotate(60deg);
+}
+.box-120deg {
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    transform: rotate(60deg);
+}
+#arapp6d {
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    transform: rotate(-120deg);
+    background-image: url("../images/arapp6d.png");
+    background-size: 60%;
+    background-position: center;
+}
+#raspigrasses {
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    transform: rotate(-120deg);
+    background-image: url("../images/smartgrassespi.png");
+    background-size: 60%;
+    background-position: center;
+}
 
 /* レスポンシブデザイン */
 @media screen and (max-width: 500px) {
@@ -165,12 +217,12 @@ iframe {
 
 }
 
-@media screen and (min-width: 501px) and (max-width: 800px) {
-    /* タブレット縦 */
+@media screen and (min-width: 501px) and (max-width: 850px) {
+    /* スパートフォン横、タブレット縦 */
     
 }
 
-@media screen and (min-width: 801px) {
+@media screen and (min-width: 851px) {
     /* タブレット横、PC */
     .sub-center {
         font-size: 3vmin;
