--- a/css/index.css
+++ b/css/index.css
@@ -149,8 +149,8 @@ p {
     margin: 30vh 0px;
 }
 .box {
-    width: 50vmin;
-    height: calc(50vmin * 0.8660254);
+    width: 80vmin;
+    height: calc(80vmin * 0.8660254);
     margin: 5vmin auto;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -172,30 +172,6 @@ p {
     overflow: hidden;
     transform: rotate(60deg);
 }
-#arapp6d {
-    width: 100%;
-    height: 100%;
-    transform: rotate(-120deg);
-    background-image: url("../images/arapp6d.png");
-    background-size: cover;
-    background-position: center;
-}
-#raspigrasses {
-    width: 100%;
-    height: 100%;
-    transform: rotate(-120deg);
-    background-image: url("../images/smartgrassespi.png");
-    background-size: cover;
-    background-position: center;
-}
-#avatar2i {
-    width: 100%;
-    height: 100%;
-    transform: rotate(-120deg);
-    background-image: url("../images/2iAvatar.png");
-    background-size: cover;
-    background-position: center;
-}
 #sfgui {
     width: 100%;
     height: 100%;
@@ -212,6 +188,30 @@ p {
     background-size: cover;
     background-position: center;
 }
+#raspigrasses {
+    width: 100%;
+    height: 100%;
+    transform: rotate(-120deg);
+    background-image: url("../images/smartgrassespi.png");
+    background-size: cover;
+    background-position: center;
+}
+#arapp6d {
+    width: 100%;
+    height: 100%;
+    transform: rotate(-120deg);
+    background-image: url("../images/arapp6d.png");
+    background-size: cover;
+    background-position: center;
+}
+#avatar2i {
+    width: 100%;
+    height: 100%;
+    transform: rotate(-120deg);
+    background-image: url("../images/2iAvatar.png");
+    background-size: cover;
+    background-position: center;
+}
 
 /* レスポンシブデザイン */
 @media screen and (max-width: 500px) {
@@ -221,7 +221,10 @@ p {
 
 @media screen and (min-width: 501px) and (max-width: 850px) {
     /* スパートフォン横、タブレット縦 */
-    
+    .box {
+        width: 50vmin;
+        height: calc(50vmin * 0.8660254);
+    }
 }
 
 @media screen and (min-width: 851px) {
@@ -229,8 +232,8 @@ p {
     .sub-center {
         font-size: 3vmin;
     }
-    iframe {
-        height: 27vmin;
-        width: 48vmin;
+    .box {
+        width: 50vmin;
+        height: calc(50vmin * 0.8660254);
     }
 }
