--- a/css/index.css
+++ b/css/index.css
@@ -186,7 +186,7 @@ p {
     width: 100%;
     height: 100%;
     transform: rotate(-120deg);
-    background-image: url("../images/sfgui.png");
+    background-image: url("../images/sfgui.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -194,7 +194,7 @@ p {
     width: 100%;
     height: 100%;
     transform: rotate(-120deg);
-    background-image: url("../images/lunchbox.png");
+    background-image: url("../images/lunchbox.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -202,7 +202,7 @@ p {
     width: 100%;
     height: 100%;
     transform: rotate(-120deg);
-    background-image: url("../images/smartgrassespi.png");
+    background-image: url("../images/smartgrassespi.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -210,7 +210,7 @@ p {
     width: 100%;
     height: 100%;
     transform: rotate(-120deg);
-    background-image: url("../images/arapp6d.png");
+    background-image: url("../images/arapp6d.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -218,7 +218,7 @@ p {
     width: 100%;
     height: 100%;
     transform: rotate(-120deg);
-    background-image: url("../images/2iAvatar.png");
+    background-image: url("../images/2iAvatar.jpg");
     background-size: cover;
     background-position: center;
 }
